--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/vue": "^2.0.8",
     "@supabase/supabase-js": "^1.35.7",
     "@tailwindcss/typography": "^0.5.7",
+    "lodash": "^4.17.21",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
   },
